--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ h3{
 
 .bbtn {
 	background: #C4161C;
-	padding: 6px 21px;
+	padding: 7px 21px;
 	display: inline-block;
 }
 .h-t-button {
@@ -271,7 +271,7 @@ h3{
 	flex-wrap: wrap;
 }
 .p-card-wrapper:hover {
-	box-shadow: 0px 20px 50px -10px rgba(0, 0, 0, .1);
+	box-shadow: 0px 70px 50px -10px rgba(0, 0, 0, .1);
 }
 .service-sectoion {
 	padding: 0 0 100px 0;
@@ -290,6 +290,9 @@ h3{
 	padding: 29px 20px;
 	background: #F8F8F9;
 	border-radius: 20px;
+	max-width: 400px;
+	height: 100%;
+	margin: auto;
 }
 .searvice-card li::before {
 	content: "";
@@ -310,10 +313,14 @@ h3{
 	height: 100%;
 	align-items: center;
 	display: flex;
+	max-width: 400px;
+	margin: auto;
 }
 .searvice-card3 {
 	height: 100%;
 	position: relative;
+	max-width: 400px;
+	margin: auto;
 }
 .service-card-text h5 {
 	color: white;
@@ -324,6 +331,7 @@ h3{
 .medico .fa-brands {
 	font-size: 22px;
 	color: var(--primary);
+	
 }
 .service-sectoion .col-lg-3 {
 	margin-bottom: 30px;
@@ -358,13 +366,13 @@ h3{
 	padding: 10px 20px;
 }
 .service-sectoion .col-lg-3.col-md-6 .searvice-card:hover {
-	box-shadow: 0px 20px 50px -10px rgba(0, 0, 0, .1);
+	box-shadow: 0px 70px 50px -10px rgba(0, 0, 0, .1);
 }
 .service-sectoion .col-lg-3.col-md-6 .searvice-card2:hover {
-	box-shadow: 0px 20px 50px -10px rgba(0, 0, 0, .1);
+	box-shadow: 0px 70px 50px -10px rgba(0, 0, 0, .1);
 }
 .service-sectoion .col-lg-3.col-md-6 .searvice-card3:hover {
-	box-shadow: 0px 20px 50px -10px rgba(0, 0, 0, .1);
+	box-shadow: 0px 70px 50px -10px rgba(0, 0, 0, .1);
 }
 /* .searvice-card3:hover{
 	transform: scale(1.1);
@@ -549,7 +557,7 @@ h3{
 	margin-bottom: 30px;
 }
 .success-card:hover {
-	box-shadow: 0px 70px 50px -10px rgba(0, 0, 0, 0.07);
+	box-shadow: 0px 20px 50px -10px rgba(0, 0, 0, 0.07);
 }
 .sc-content {
 	padding-top: 30px;
@@ -598,7 +606,6 @@ h3{
 	display: flex;
 	flex-direction: column;
 	gap: 25px;
-	padding-top: 46px;
 }
 .medico {
 	display: flex;
@@ -640,7 +647,8 @@ h3{
 	margin: auto auto 30px auto;
 }
 .recent-card:hover {
-	box-shadow: 0px 70px 50px -10px rgba(0, 0, 0, 0.07);
+	box-shadow: 0px 20px 50px -10px rgba(0, 0, 0, 0.07);
+	background: white;
 }
 .recently-blog {
 	padding: 30px 0 100px 0;
@@ -1214,12 +1222,17 @@ embed{
 .photo-card {
 	margin-bottom: 30px;
 	overflow: hidden;
+	display: block;
 }
 .photo-card:hover img {
 	transform: scale(1.1);
 }
 .photo-card img {
 	transition: .5s;
+	height: 235px;
+	display: block;
+	width: 100%;
+	object-fit: cover;
 }
 .all-branch-plus img {
 	height: 150px;
@@ -1280,7 +1293,7 @@ h1, h2, h3, h4, h5, h6 {
 .b-details-wrapper {
 	display: flex;
 	flex-direction: column;
-	gap: 20px;
+	gap: 25px;
 	max-width: 750px;
 	margin: auto;
 }
@@ -1342,14 +1355,55 @@ h1, h2, h3, h4, h5, h6 {
 	letter-spacing: 0em;
 	color: #515A60;
 }
+.modal-header {
+	display: flex;
+	justify-content: right;
+	padding-right: 41px;
+}
+.modal-header .fa-solid.fa-xmark {
+	font-size: 26px;
+	color: var(--primary);
+}
 
 
 
+.p-input input {
+	display: none;
+}
 
+.p-input input:checked + span:after{
+	opacity: 1;
+}
 
-
-
-
+.p-input span {
+	position: relative;
+	padding-left: 25px;
+}
+.p-input span::before {
+	content: "";
+	position: absolute;
+	left: 0;
+	height: 15px;
+	width: 15px;
+	border: 2px solid;
+	border-radius: 50%;
+	top: 2px;
+	color: var(--primary);
+}
+.p-input span::after {
+	height: 7px;
+	width: 7px;
+	position: absolute;
+	left: 4px;
+	background: var(--primary);
+	content: "";
+	border-radius: 50%;
+	top: 6px;
+	opacity: 0;
+}
+.b-details-wrapper ul li {
+	margin: 9px 0;
+}
 
 
 
@@ -1437,7 +1491,24 @@ h1, h2, h3, h4, h5, h6 {
 		line-height: 41px;
 		margin-bottom: 10px;
 	}
-
+	.enrollment-text h1 {
+		font-size: 33px;
+	}
+	.enrollment-text {
+		gap: 20px;
+	}
+	.service-sectoion .col-lg-3.col-md-6 .searvice-card:hover {
+		box-shadow: 0px 20px 50px -10px rgba(0, 0, 0, .1);
+	}
+	.service-sectoion .col-lg-3.col-md-6 .searvice-card2:hover {
+		box-shadow: 0px 20px 50px -10px rgba(0, 0, 0, .1);
+	}
+	.service-sectoion .col-lg-3.col-md-6 .searvice-card3:hover {
+		box-shadow: 0px 20px 50px -10px rgba(0, 0, 0, .1);
+	}
+	.p-card-wrapper:hover {
+		box-shadow: 0px 20px 50px -10px rgba(0, 0, 0, .1);
+	}
 }
 
 
@@ -1487,5 +1558,8 @@ h1, h2, h3, h4, h5, h6 {
 	.all-branch-plus2 img {
 		display: none;
 	}
+	/* .owl-nav button {
+		display: none;
+	} */
 	
 }
