--- a/style.css
+++ b/style.css
@@ -1404,13 +1404,47 @@ h1, h2, h3, h4, h5, h6 {
 .b-details-wrapper ul li {
 	margin: 9px 0;
 }
-
-
-
-
-
-
-
+.founder-right {
+	display: flex;
+	flex-direction: column;
+	gap: 25px;
+}
+.founder-right p {
+	font-family: Roboto;
+}
+.founder-section {
+	padding: 80px 0;
+}
+.founder-right h3 {
+	font-family: Roboto;
+	font-size: 30px;
+	font-weight: 600;
+	line-height: 36px;
+	color: #172430;
+}
+.founder-right h4 {
+	font-size: 16px;
+	font-weight: 600;
+}
+.jony {
+	display: flex;
+	flex-direction: column;
+	gap: 7px;
+}
+.btn.btn-secondary {
+	background: white;
+	border-radius: 50%;
+	position: absolute;
+	top: 0;
+	right: 15px;
+}
+.fa-solid.fa-xmark {
+	font-size: 26px;
+	color: black;
+}
+.modal-body {
+	position: relative;
+}
 
 
 
